# AMR

./: CMakeLists.txt
source/cpp/: Edge.cpp  Face.cpp  Geometry.cpp  MortonHasher.cpp  Vector.cpp  Vertex.cpp  main.cpp
source/hpp/: Config.hpp  Edge.hpp  Face.hpp  Geometry.hpp  Mortonhasher.hpp  Stl.hpp  Vector.hpp  Vertex.hpp  constants.hpp  data_type.hpp  preprocessor.hpp
